# EasyNes

./: .clang-format  .gitignore  CMakeLists.txt  NesTest.cbp  compile.sh  setup_project.sh
.cache/clangd/index/: CPU.cpp.3356FC0FB167C901.idx  CPU.hpp.88FCB2A6E3BEAA41.idx  Core.cpp.D798747C2C1A548C.idx  Core.hpp.E028C1C4927E6A38.idx  Main.cpp.8BF88ACF695D03E4.idx  RAM.cpp.1A715267D4A25A84.idx  RAM.hpp.DB0F9AC40C072A40.idx  Types.hpp.C998E2E7C334871B.idx
Source/: CMakeLists.txt  EasyNes  Main.cpp
Source/Emulator/: CPU.cpp  CPU.hpp  Core.cpp  Core.hpp  Instructions.hpp  RAM.hpp  Types.hpp
src/App/: CMakeLists.txt  Main.cpp
src/Emulator/: CMakeLists.txt  CPU.cpp  CPU.hpp  Instructions.hpp  RAM.cpp  RAM.hpp  Types.hpp
src/Test/: CMakeLists.txt  TestCPU.cpp
